# gmp-pso

./: environment-cpu.yml  environment-gpu.yml  environment.yml  main.ipynb  main.py  pyproject.toml
core/: benchmarks.py  jax_gd_pso.py  numpy_pso.py  plot_benchmarks.py  pso.py  python_pso.py
data/: results.csv
gmp_pso/: benchmarks.py  jax_pso.py  numpy_pso.py  parallel_jax_pso.py  plot_benchmarks.py  python_pso.py
notebooks/: benchmark.ipynb  plots.ipynb  tests.ipynb
results/: benchmark_results.csv  convergence_table.tex  execution_time_table.tex  execution_time_table_100d.csv  execution_time_table_128d.csv  execution_time_table_16d.csv  execution_time_table_256d.csv  execution_time_table_2d.csv  execution_time_table_30d.csv  execution_time_table_32d.csv  execution_time_table_4d.csv  execution_time_table_500d.csv  execution_time_table_512d.csv  execution_time_table_64d.csv  execution_time_table_8d.csv  experiment_results.csv
results/backup/tables/: execution_time_table_1000d.csv  (+6 more)
results/tables/: execution_time_table_10d.csv  execution_time_table_2d.csv  execution_time_table_30d.csv  execution_time_table_50d.csv
src/: benchmarks.py  config.py  hyperparameters.py
src/algorithms/: classic_pso.py  jax_pso.py  parallel_jax_pso.py  pso.py  vectorized_pso.py
src/analysis/: plot_execution_time_bars.py  plot_execution_time_boxplot.py  plot_execution_time_dims.py  plot_speedup_heatmap.py  plot_summary_table.py
src/benchmarks/: ackley.py  alpine.py  griewank.py  rastrigin.py  rosenbrock.py  salomon.py  schwefel.py  sphere.py  styblinski_tang.py
