[project]
name = "psox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jax[cuda13]>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[tool.ruff]
indent-width = 4
line-length = 88
select = [
	"ALL",
]
ignore = [
	"D100",
	"D101",
	"D102",
	"D103",
	"D107",
	"T201",
	"PLR0913",
	"S311",
	"INP001",
	"TC002",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 100  

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
